feat: align verification workflows with user semantics